--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tina Digital</title>
+    <title>Cold Brew</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <!---- box icons link --->
